# backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: main.py  models.py
app/dependencies/: auth.py
app/routes/: auth.py  categorias_reclamos.py  detalles_servicio.py  estados.py  estados_reclamos.py  historial_estados.py  insumos.py  metodos_pago.py  modalidades_servicio.py  pedidos.py  reclamos.py  roles.py  servicios.py  unidades_limpieza.py  usuarios.py
app/schemas/: categorias_reclamos.py  detalles_servicio.py  estados.py  estados_reclamos.py  historial_estados.py  insumos.py  metodos_pago.py  modalidades_servicio.py  pedidos.py  reclamos.py  roles.py  servicios.py  unidades_limpieza.py  usuarios.py
app/scripts/: create_admin.py
app/services/: categorias_reclamos.py  detalles_servicio.py  estados.py  estados_reclamos.py  historial_estados.py  insumos.py  mercadopago.py  metodos_pago.py  modalidades_servicio.py  pedidos.py  reclamos.py  roles.py  servicios.py  unidades_limpieza.py  usuarios.py
app/sql/: seed_data.sql
app/utils/: email.py  security.py
tests/: conftest.py  test_auth.py  test_insumos.py  test_pagos.py  test_pedidos.py  test_reclamos.py  test_servicios.py  test_usuarios.py
