[project]
name = "lavapro-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.1",
    "geoalchemy2>=0.20.0",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.9",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "requests>=2.34.0",
    "sqlalchemy>=2.0.49",
]